--- a/Reservia/public_css/main.css
+++ b/Reservia/public_css/main.css
@@ -4,11 +4,11 @@
 }
 
 body{
-    margin: auto;
+    margin: 3.75em;
     font-family: 'Raleway',Arial, Helvetica, sans-serif;
     
 }
-/* Style the Nav */
+/* --------------------------------Style the Nav ----------------------------------------------*/
 .topnav {
   position: relative;
   display: flex;
@@ -22,7 +22,7 @@ body{
   text-decoration: none;
 }
 
-/* Style the nav-right */
+/* -----------------------------Style the nav-right --------------------------------------------*/
 .topnav-right {
   display: flex;
   flex-wrap: wrap;
@@ -42,7 +42,7 @@ body{
 }
 
 
-/* Style the nav-logo */
+/* -------------------------Style the nav-logo---------------------------------------------------- */
 .logo{
   display: inline-block;
   flex:  1 1 auto;
@@ -54,12 +54,12 @@ body{
 
 
 
-/* For the  active/current Nav */
+/* ------------------------For the  active/current Nav------------------------------------------- */
 .topnav-text:active {
   border-top: 5px solid #0065fc;
 }
 
-/* Responsive navigation menu (for mobile devices) */
+/* ------------------------Responsive navigation menu (for mobile devices)----------------------- */
 @media screen and (max-width: 600px) {
   .topnav a, .topnav-right {
     float: none;
@@ -71,5 +71,53 @@ body{
     top: 0;
     left: 0;
     transform: none;
+  }
+}
+
+/*--------------------------Style Headers----------------------------------------------------------*/
+.container-header {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  flex-basis: auto;
+  width: 22.8em;
+  background-color: #f2f2f2;
+  overflow: auto;
+  border-radius: 10%;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.flex {
+  padding: 10px;  
+  border: 5px solid #0065FC;
+  font-size: 20px;
+  text-align: center;
+
+}
+.home{
+ background-color: #f2f2f2;
+ border-radius: 10%;
+ border: 5px solid #f2f2f2; 
+   
+ 
+ }
+.text-adress{
+ border: 5px solid white; 
+ background-color: white;
+    
+}
+.rechercher{
+ background-color : #0065FC;
+ border-radius: 10%;
+ color: white;
+}
+
+
+@media screen and (max-width: 500px) {
+  .navbar a {
+    float: none;
+    display: inline;
   }
 }
