--- a/Reservia/public_css/main.css
+++ b/Reservia/public_css/main.css
@@ -1,40 +1,40 @@
 @font-face {
- font-family:'Raleway', sans-serif;
+    font-family:'Raleway', sans-serif;
 
 }
 
 body{
     margin: 3.75em;
     font-family: 'Raleway',Arial, Helvetica, sans-serif;
-    
+
 }
 /* --------------------------------Style the Nav ----------------------------------------------*/
 .topnav {
-  position: relative;
-  display: flex;
-  margin: 16px;  
+    position: relative;
+    display: flex;
+    margin: 16px;  
 }
 .topnav a {
-  color: #0065fc;
-  text-align: center;
-  padding: 14px 16px;
-  font-size: 17px;
-  text-decoration: none;
+    color: #0065fc;
+    text-align: center;
+    padding: 14px 16px;
+    font-size: 17px;
+    text-decoration: none;
 }
 
 /* -----------------------------Style the nav-right --------------------------------------------*/
 .topnav-right {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  flex-basis: auto;
-  font-size: 17px;
-  color: #0065fc;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    flex-basis: auto;
+    font-size: 17px;
+    color: #0065fc;
 }
 .topnav-text {
-  flex:  0 1 auto;
-  margin: 20px;
-  justify-content: flex-end;
+    flex:  0 1 auto;
+    margin: 20px;
+    justify-content: flex-end;
 }
 #signin{
     font-weight: bold;   
@@ -44,80 +44,162 @@ body{
 
 /* -------------------------Style the nav-logo---------------------------------------------------- */
 .logo{
-  display: inline-block;
-  flex:  1 1 auto;
-  margin: 0 auto;
-  justify-content: flex-start;
-  width: 50px;
-  height: 50px;
+    display: inline-block;
+    flex:  1 1 auto;
+    margin: 0 auto;
+    justify-content: flex-start;
+    width: 50px;
+    height: 50px;
 }
 
 
 
 /* ------------------------For the  active/current Nav------------------------------------------- */
 .topnav-text:active {
-  border-top: 5px solid #0065fc;
+    border-top: 5px solid #0065fc;
 }
 
 /* ------------------------Responsive navigation menu (for mobile devices)----------------------- */
 @media screen and (max-width: 600px) {
-  .topnav a, .topnav-right {
-    float: none;
-    display: block;
-  }
-  
-  .topnav-centered a {
-    position: relative;
-    top: 0;
-    left: 0;
-    transform: none;
-  }
+    .topnav a, .topnav-right {
+        float: none;
+        display: block;
+    }
+
+    .topnav-centered a {
+        position: relative;
+        top: 0;
+        left: 0;
+        transform: none;
+    }
 }
 
-/*--------------------------Style Headers----------------------------------------------------------*/
+/*--------------------------Style Headers Search----------------------------------------------------------*/
 .container-header {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  flex-basis: auto;
-  width: 22.8em;
-  background-color: #f2f2f2;
-  overflow: auto;
-  border-radius: 10%;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    flex-basis: auto;
+    width: 31.4em;
+    background-color: #f2f2f2;
+    overflow: auto;
+    border-radius: 20px 20px 20px 20px;
+    margin: 0;
+    padding: 0;
+
 }
 
 .flex {
-  padding: 10px;  
-  border: 5px solid #0065FC;
-  font-size: 20px;
-  text-align: center;
+    padding: 10px;  
+    border: 5px solid #0065FC;
+    font-size: 20px;
+    text-align: center;
 
 }
 .home{
- background-color: #f2f2f2;
- border-radius: 10%;
- border: 5px solid #f2f2f2; 
-   
- 
- }
-.text-adress{
- border: 5px solid white; 
- background-color: white;
-    
+    background-color: #f2f2f2;
+    border: 5px solid #f2f2f2;
+    width: 2.5em; 
 }
+
+#adress-text{
+    background-color: white;
+    border: 2px solid #f2f2f2;
+    padding-left: 20px;
+    font-weight: bold;
+    font-size: 20px;
+
+}
+
 .rechercher{
- background-color : #0065FC;
- border-radius: 10%;
- color: white;
+    background-color : #0065FC;
+    border-radius: 00px 20px 20px 0px;
+    color: white;
 }
 
 
 @media screen and (max-width: 500px) {
-  .navbar a {
-    float: none;
-    display: inline;
-  }
+    .navbar a {
+        float: none;
+        display: inline;
+    }
+}
+
+/*--------------------------Style Headers Filtering---------------------------*/
+.filtre, .filtre-label{
+    display: inline-block;
+    margin-right: 33px;
+    margin-top: 30px;
+}
+
+.filtre-label{
+    display: inline-block;
+    margin-right: 33px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.cadre{
+    display: inline-block;
+    height: 50px;     
+    border-radius: 25px;
+    border-top:  1px solid  black;
+    border-bottom:   1px solid  black;
+    border-right:  1px solid  black;
+    border-left: 1px solid  #deebff;
+    margin-right: 33px;
+}
+
+.filtre-logo-container{
+    display: inline-block;
+    border-radius: 25px;
+    background-color: #deebff;
+    width: 50px; 
+    height: inherit;
+    font-size: 20px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.filtre-logo{
+    font-size: 20px;
+    text-align: center;
+    margin: 15px;
+}
+
+.filtre-text-container{
+    display: inline-block;
+    background-color: white;
+    padding-right: 20px;
+    padding-left: 15px;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 25px;
+}
+
+.info-container{
+    margin-top: 30px;
+}
+
+.info-label{
+    display: inline-block;
+    border-radius: 50px;
+    border:  1px solid #deebff;
+    width: 50px; 
+    height: 50px;
+    font-size: 15px;
+    text-align: center;
+   
+}
+
+.info-text{
+    display: inline-block;
+}
+
+.info-logo{
+    font-size: 20px;
+    text-align: center;
+    margin: 15px;
+    color: #0065FC;
+
 }
