--- a/Reservia/public_css/main.css
+++ b/Reservia/public_css/main.css
@@ -150,6 +150,10 @@ body{
     margin-right: 33px;
 }
 
+.cadre:hover{
+    background-color: #deebff;
+}
+
 .filtre-logo-container{
     display: inline-block;
     border-radius: 25px;
@@ -169,7 +173,6 @@ body{
 
 .filtre-text-container{
     display: inline-block;
-    background-color: white;
     padding-right: 20px;
     padding-left: 15px;
     font-weight: bold;
@@ -178,7 +181,7 @@ body{
 }
 
 .info-container{
-    margin-top: 30px;
+    margin: 30px 0 30px 0;
 }
 
 .info-label{
@@ -189,7 +192,7 @@ body{
     height: 50px;
     font-size: 15px;
     text-align: center;
-   
+
 }
 
 .info-text{
@@ -202,4 +205,138 @@ body{
     margin: 15px;
     color: #0065FC;
 
+}
+
+/*--------------------------Style Section 1 Hebergement---------------------------*/
+.hebergement{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 40px;
+    grid-auto-rows: minmax(100px, auto);
+}
+
+
+
+.box1{
+    float: left;
+    background-color: #F2F2F2;
+    width: 1050px;
+    height: 900px;
+    text-align: left;
+    grid-column: 1 / 3;
+    grid-row: 1;
+    border-radius: 3%;
+}
+
+
+
+.h2-title{
+    margin-left:40px;
+}
+
+.column-hebergement {
+    float: left;
+    width: 250px;
+    margin: 0 40px 40px 40px;
+    padding: 0 10px;
+}
+
+.row-hebergement-1:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+
+
+.card-hebergement {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 16px;
+    text-align: center;
+    background-color: #f2f2f2;
+    width: 240px;
+    height: 200px;
+    border-radius:10%;
+}
+
+.hebergement-picture{
+    width: 240px;
+    height: 114px;
+    border-radius: 10px 10px 0px 0px;
+}
+
+.card-text{
+    text-align: left;
+    margin-left: 20px 
+}
+
+.checked {
+    color:  #0065FC;
+}
+
+.nochecked{
+    color:#D3D3D3;
+    margin-bottom: 20px;
+
+}
+
+.rating{
+    margin: 5px 0 0 0;
+}
+
+.title-card{
+    margin: 0 0 5px 0;
+
+}
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+        display: block;
+        margin-bottom: 20px;
+    }
+}
+
+/*--------------------------Style Section 1 Populaire---------------------------*/
+.box2{
+    float: right;
+    background-color: #F2F2F2;
+    grid-column: 3/ 3;
+    grid-row: 1;
+    height: 900px;
+    width: 445px;
+    border-radius: 3%;
+}
+
+.column-populaire{
+    background-color: #F2F2F2;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card-populaire {
+    float: left;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 16px;
+    margin: 0 0 40px 40px;
+    text-align: center;
+    background-color: #f2f2f2;
+    width: 340px;
+    height: 140px;
+    border-radius:10%;
+}
+
+.populaire-picture{
+    float:left;
+    padding: 1px;
+    width: 140px;
+    height: 150px;
+    border-radius: 10px 0px 0px 10px;
+}
+
+.card-populaire-text{
+    float:right;
+
+    margin-left: 20px 
 }
