--- a/Reservia/public_css/main.css
+++ b/Reservia/public_css/main.css
@@ -221,7 +221,7 @@ body{
     float: left;
     background-color: #F2F2F2;
     width: 1050px;
-    height: 900px;
+    height: 700px;
     text-align: left;
     grid-column: 1 / 3;
     grid-row: 1;
@@ -230,8 +230,9 @@ body{
 
 
 
-.h2-title{
+.h2-title, .afficher-plus{
     margin-left:40px;
+    font-weight: bolder;
 }
 
 .column-hebergement {
@@ -280,17 +281,17 @@ body{
 
 }
 
-.rating{
-    margin: 5px 0 0 0;
+.rating-hebergement{
+    margin: 15px 0 0 0;
 }
 
 .title-card{
-    margin: 0 0 5px 0;
+    margin: 0 0 15px 0;
 
 }
 /* Responsive columns */
 @media screen and (max-width: 600px) {
-    .column {
+    .box1 {
         width: 100%;
         display: block;
         margin-bottom: 20px;
@@ -303,7 +304,7 @@ body{
     background-color: #F2F2F2;
     grid-column: 3/ 3;
     grid-row: 1;
-    height: 900px;
+    height: 700px;
     width: 445px;
     border-radius: 3%;
 }
@@ -318,9 +319,9 @@ body{
 .card-populaire {
     float: left;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 16px;
+    padding: 5px 0 5px 5px;
     margin: 0 0 40px 40px;
-    text-align: center;
+    text-align: left;
     background-color: #f2f2f2;
     width: 340px;
     height: 140px;
@@ -330,8 +331,9 @@ body{
 .populaire-picture{
     float:left;
     padding: 1px;
-    width: 140px;
-    height: 150px;
+    margin-right: 20px;
+    width: 130px;
+    height: 133px;
     border-radius: 10px 0px 0px 10px;
 }
 
@@ -339,4 +341,67 @@ body{
     float:right;
 
     margin-left: 20px 
+}
+
+.rating-populaire{
+    margin-top: 45px;
+}
+
+
+/*--------------------------Style Section 2 Activite---------------------------*/
+.box3{
+    width: 100%;
+}
+
+.row-activite {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+.container-activite-large {
+    padding: 2px 16px;
+    width: 307px;
+    height: 445px;
+}
+
+.column-activite {
+    flex: 1;
+
+
+}
+
+.card-activite {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 305px;
+}
+
+.card-activite-large{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 305px;
+    height: 400px;
+    border-radius: 10px 10px 0px 0px;
+}
+
+
+.container-activite {
+    padding: 2px 16px;
+}
+
+.activite-picture{
+    float:left;
+    padding: 1px;
+    margin-right: 20px;
+    width: 305px;
+    height: 181px;
+    border-radius: 10px 0px 0px 10px;
+}
+
+.activite-picture-large{
+    float:left;
+    padding: 1px;
+    margin-right: 20px;
+    width: 304px;
+    height: 350px;
+    border-radius: 10px 10px 0px 0px;
 }
