--- a/Reservia/public_css/main.css
+++ b/Reservia/public_css/main.css
@@ -220,12 +220,12 @@ body{
 .box1{
     float: left;
     background-color: #F2F2F2;
-    width: 1050px;
+    width: 1080px;
     height: 700px;
     text-align: left;
     grid-column: 1 / 3;
     grid-row: 1;
-    border-radius: 3%;
+    border-radius: 20px;
 }
 
 
@@ -257,13 +257,14 @@ body{
     background-color: #f2f2f2;
     width: 240px;
     height: 200px;
-    border-radius:10%;
+    border-radius:10px;
 }
 
 .hebergement-picture{
     width: 240px;
     height: 114px;
     border-radius: 10px 10px 0px 0px;
+    object-fit: cover;
 }
 
 .card-text{
@@ -305,8 +306,8 @@ body{
     grid-column: 3/ 3;
     grid-row: 1;
     height: 700px;
-    width: 445px;
-    border-radius: 3%;
+    width: 480px;
+    border-radius: 20px;
 }
 
 .column-populaire{
@@ -323,9 +324,9 @@ body{
     margin: 0 0 40px 40px;
     text-align: left;
     background-color: #f2f2f2;
-    width: 340px;
+    width: 380px;
     height: 140px;
-    border-radius:10%;
+    border-radius: 10px;
 }
 
 .populaire-picture{
@@ -335,6 +336,7 @@ body{
     width: 130px;
     height: 133px;
     border-radius: 10px 0px 0px 10px;
+    object-fit: cover;
 }
 
 .card-populaire-text{
@@ -351,57 +353,94 @@ body{
 /*--------------------------Style Section 2 Activite---------------------------*/
 .box3{
     width: 100%;
+
 }
 
-.row-activite {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 4px;
+.row-activite-container {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    gap: 20px 20px;
+    height: 450px;
+    grid-template-areas:
+        "Vieux-port Vieux-port Pomegues Pomegues Calangues Calangues Dame-de-la-garde Dame-de-la-garde"
+        "Vieux-port Vieux-port Pomegues Pomegues Calangues Calangues Dame-de-la-garde Dame-de-la-garde"
+        "Vieux-port Vieux-port Pomegues Pomegues Calangues Calangues Dame-de-la-garde Dame-de-la-garde"
+        "Vieux-port Vieux-port Pomegues Pomegues Calangues Calangues Longchamps Longchamps"
+        "Vieux-port Vieux-port Frioul Frioul Calangues Calangues Longchamps Longchamps"
+        "Vieux-port Vieux-port Frioul Frioul Calangues Calangues Longchamps Longchamps";
 }
 
-.container-activite-large {
-    padding: 2px 16px;
-    width: 307px;
-    height: 445px;
+.card-vieux-port{
+    grid-area: Vieux-port;
+
 }
 
-.column-activite {
-    flex: 1;
+.card-Pomegues {
+    grid-area: Pomegues;
+}
 
+.card-Frioul {
+    grid-area: Frioul;
+}
 
+.card-Calangues {
+    grid-area: Calangues;
+}
+
+.card-Dame-de-la-garde { 
+    grid-area: Dame-de-la-garde;
+}
+
+.card-Longchamps { 
+    grid-area: Longchamps;
 }
 
 .card-activite {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 305px;
-}
-
-.card-activite-large{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 305px;
-    height: 400px;
-    border-radius: 10px 10px 0px 0px;
-}
-
-
-.container-activite {
-    padding: 2px 16px;
+    height: 100%;
+    width: 345px;
+    border-radius: 10px;
 }
 
 .activite-picture{
     float:left;
     padding: 1px;
     margin-right: 20px;
-    width: 305px;
+    margin-bottom: 10px;
+    width: 344px;
     height: 181px;
-    border-radius: 10px 0px 0px 10px;
+    border-radius:  10px 10px 0px 0px;
+    object-fit: cover;
+}
+.picture-frioul{
+    width: 344px;
+    height: 100px;
+    object-fit: cover;
+ 
+    
+}
+.picture-large{
+    width: 344px;
+    height: 413px;
+    
+    
 }
 
-.activite-picture-large{
-    float:left;
-    padding: 1px;
-    margin-right: 20px;
-    width: 304px;
-    height: 350px;
-    border-radius: 10px 10px 0px 0px;
+.picture-pomegues{
+    height: 255px;
 }
+
+
+.picture-dame, .picture-longchamps{
+    height: 175px;
+}
+
+.text-activite{
+    margin-left: 20px;
+    text-align: left;
+    font-weight: bold;
+        
+}
+
+
