--- a/Reservia/public_css/mobile/main-mobile.css
+++ b/Reservia/public_css/mobile/main-mobile.css
@@ -4,15 +4,16 @@
 }
 
 body{
-    margin: 3.75em;
+
     font-family: 'Raleway',Arial, Helvetica, sans-serif;
+    margin: 5px;
 
 }
 
 
-/* --------------------------------Style the Nav ----------------------------------------------*/
+/* --------------------------------Style the Nav top ----------------------------------------------*/
 .topnav {
-    display: flex;
+    display: inline;
     margin: 20px 100px 20px 0; 
 }
 .topnav a {
@@ -21,60 +22,72 @@ body{
     font-size: 17px;
     text-decoration: none;
 }
+.logo-picture{
+    float: left;
+    margin: 0 120px 20px 20px;
 
-/* -----------------------------Style the nav-right --------------------------------------------*/
-.topnav-right {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    flex-basis: auto;
-    font-size: 17px;
-    color: #0065fc;
 }
-.topnav-text {
-    margin: 20px;
-
+.inscription{
+    float: right;
+    margin-top: 15px;
 }
 #signin{
     font-weight: bold;   
     border: none;
 }
-
-
-/* -------------------------Style the nav-logo---------------------------------------------------- */
 .logo{
     display: inline-block;
-    flex:  1 1 auto;
-    margin: 0 auto;
-    justify-content: flex-start;
-    width: 50px;
     height: 50px;
+    margin-top: 20px;
 }
+
+/* -----------------------------Style the nav-bottom --------------------------------------------*/
+.topnav-right{
+    margin-top: 20px;
+}
+
+
+.topnav-text-hebergement{
+
+    float: left;
+    width: 160px;
+    text-align: center;
+
+
+}
+.topnav-text-activite{
+    float: right;
+    width: 160px;
+    text-align: center;
+}
+
+
 
 
 
 /* ------------------------For the  active/current Nav------------------------------------------- */
-.topnav-text:active {
-    border-top: 5px solid #0065fc;
+.topnav-text-hebergement:active {
+    border-bottom: 5px solid #0065fc;
 }
-
+.topnav-text-activite:active {
+    border-bottom: 5px solid #0065fc;
+}
 
 
 /*--------------------------Style Headers Search----------------------------------------------------------*/
 .header-title{
     font-weight: bolder;
+    display: block;
+    margin-left: 10px;
 }
-
+.header-text{
+    margin-left: 10px;
+}
 .container-header {
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    flex-basis: auto;
-    width: 31.4em;
     background-color: #f2f2f2;
-    overflow: auto;
     border-radius: 20px 20px 20px 20px;
-    margin: 0;
+    margin-left: 10px;
     padding: 0;
 
 }
@@ -89,7 +102,7 @@ body{
 .home{
     background-color: #f2f2f2;
     border: 5px solid #f2f2f2;
-    width: 2.5em; 
+
 }
 
 #adress-text{
@@ -98,21 +111,21 @@ body{
     padding-left: 20px;
     font-weight: bold;
     font-size: 20px;
+    width: 200px;
 
 }
 
 .rechercher{
     background-color : #0065FC;
-    border-radius: 00px 20px 20px 0px;
+    border-radius: 15px;
     color: white;
 }
 
 
 /*--------------------------Style Headers Filtering---------------------------*/
 .filtre, .filtre-label{
-    display: inline-block;
-    margin-right: 33px;
-    margin-top: 30px;
+    display: block;
+    margin-top: 10px;
     font-size: 20px;
     font-weight: bold;
 }
@@ -125,7 +138,23 @@ body{
     border-bottom:   1px solid   #d9d9d9;
     border-right:  1px solid   #d9d9d9;
     border-left: none;
-    margin-right: 33px;
+    margin-top: 20px;
+}
+.cadre-economie{
+    float: left;
+    border-radius: 25px;
+    border-top:  1px solid   #d9d9d9;
+    border-bottom:   1px solid   #d9d9d9;
+    border-right:  1px solid   #d9d9d9;
+    border-left: none;
+}
+.cadre-famille{
+    float: right;
+    border-radius: 25px;
+    border-top:  1px solid   #d9d9d9;
+    border-bottom:   1px solid   #d9d9d9;
+    border-right:  1px solid   #d9d9d9;
+    border-left: none;
 }
 
 .cadre:hover{
@@ -151,8 +180,7 @@ body{
 
 .filtre-text-container{
     display: inline-block;
-    padding-right: 20px;
-    padding-left: 15px;
+    padding-right: 20px;       
     font-weight: bold;
     font-size: 20px;
     border-radius: 25px;
@@ -164,45 +192,37 @@ body{
 
 .info-label{
     display: inline-block;
-    border-radius: 50px;
-    border:  1px solid #deebff;
-    width: 50px; 
-    height: 50px;
+    border-radius: 30px;
+    border: 1px solid #deebff;
+    width: 30px;
+    height: 30px;
     font-size: 15px;
     text-align: center;
+    margin: 0 10px 0 10px;
+    float: left;
 
 }
 
 .info-text{
     display: inline-block;
+    width: 300px;
+}
+.info-text-p{
+
+    display: inline;
+    font-size: 15px;
 }
 
-.info-logo{
-    font-size: 20px;
-    text-align: center;
-    margin: 15px;
+.info-logo{   
     color: #0065FC;
+    vertical-align: sub;
 
 }
 
 
 /*--------------------------Style Section 1 Hebergement---------------------------*/
-.hebergement{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 40px;
-    grid-auto-rows: minmax(100px, auto);
-}
-
 .box1{
-    float: left;
-    background-color: #F2F2F2;
-    width: 1080px;
-    height: 700px;
-    text-align: left;
-    grid-column: 1 / 3;
-    grid-row: 1;
-    border-radius: 20px;
+    display: contents;
 }
 
 .clic-card{
@@ -211,15 +231,12 @@ body{
 }
 
 .h2-title, .afficher-plus{
-    margin-left:40px;
+    margin-left: 10px;
     font-weight: bolder;
 }
 
 .column-hebergement {
-    float: left;
-    width: 250px;
-    margin: 0 40px 40px 40px;
-    padding: 0 10px;
+    margin: 0 0px 40px 0px;
 }
 
 .row-hebergement-1:after {
@@ -229,19 +246,19 @@ body{
 }
 
 
-
 .card-hebergement {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 16px;
     text-align: center;
     background-color: #f2f2f2;
-    width: 240px;
+    width: 325px;
     height: 200px;
     border-radius:10px;
+
 }
 
 .hebergement-picture{
-    width: 240px;
+    width: 325px;
     height: 114px;
     border-radius: 10px 10px 0px 0px;
     object-fit: cover;
@@ -268,29 +285,30 @@ body{
 
 .title-card{
     margin: 0 0 15px 0;
+}
 
+.afficher-plus{
+    margin: 0 0 40px 10px;
+    font-weight: bolder;
 }
 
 /*--------------------------Style Section 1 Populaire---------------------------*/
 .h2-title-populaire{
-    margin-left: 40px;
+    margin: 40px 40px 40px 20px;
     font-weight: bold;
     float: left;
-    margin-right: 120px;
+
 }
 .chart-logo{
     font-size: 30px;
     text-align: center;
-    margin: 20px;
+    margin: 40px 10px 0 0;
+    float:right;
 
 }
 .box2{
-    float: right;
     background-color: #F2F2F2;
-    grid-column: 3/ 3;
-    grid-row: 1;
-    height: 700px;
-    width: 480px;
+    height: 650px;
     border-radius: 20px;
 }
 
@@ -305,10 +323,10 @@ body{
     float: left;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 5px 0 5px 5px;
-    margin: 0 0 40px 40px;
+    margin: 0 0 20px 10px;
     text-align: left;
     background-color: #f2f2f2;
-    width: 380px;
+    width: 340px;
     height: 140px;
     border-radius: 10px;
 }
@@ -330,7 +348,7 @@ body{
 }
 
 .rating-populaire{
-    margin-top: 45px;
+    margin-top: 35px;
 }
 
 
@@ -341,84 +359,31 @@ body{
 }
 
 .row-activite-container {
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    gap: 20px 20px;
-    height: 450px;
-    grid-template-areas:
-        "Vieux-port Vieux-port Pomegues Pomegues Calangues Calangues Dame-de-la-garde Dame-de-la-garde"
-        "Vieux-port Vieux-port Pomegues Pomegues Calangues Calangues Dame-de-la-garde Dame-de-la-garde"
-        "Vieux-port Vieux-port Pomegues Pomegues Calangues Calangues Dame-de-la-garde Dame-de-la-garde"
-        "Vieux-port Vieux-port Pomegues Pomegues Calangues Calangues Longchamps Longchamps"
-        "Vieux-port Vieux-port Frioul Frioul Calangues Calangues Longchamps Longchamps"
-        "Vieux-port Vieux-port Frioul Frioul Calangues Calangues Longchamps Longchamps";
-}
-
-.card-vieux-port{
-    grid-area: Vieux-port;
-
-}
-
-.card-Pomegues {
-    grid-area: Pomegues;
-}
-
-.card-Frioul {
-    grid-area: Frioul;
-}
-
-.card-Calangues {
-    grid-area: Calangues;
-}
-
-.card-Dame-de-la-garde { 
-    grid-area: Dame-de-la-garde;
-}
-
-.card-Longchamps { 
-    grid-area: Longchamps;
+    margin: 20px 10px 20px 10px;
 }
 
 .card-activite {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    height: 100%;
+    height: 250px;
     width: 345px;
     border-radius: 10px;
+    margin-bottom: 40px;
 }
 
 .activite-picture{
     float:left;
     padding: 1px;
-    margin-right: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     width: 344px;
     height: 181px;
     border-radius:  10px 10px 0px 0px;
     object-fit: cover;
 }
-.picture-frioul{
-    width: 344px;
-    height: 100px;
-    object-fit: cover;
 
-
-}
 .picture-large{
     width: 344px;
-    height: 413px;
-
-
 }
 
-.picture-pomegues{
-    height: 255px;
-}
-
-
-.picture-dame, .picture-longchamps{
-    height: 175px;
-}
 
 .text-activite{
     margin-left: 20px;
@@ -429,31 +394,16 @@ body{
 
 
 /*--------------------------Style Footer---------------------------*/
-.box3{
-    width: 100%;
+.box4{
+
+    margin-left: 20px;
 
 }
-
-.footer-propos{
-    float: left;
-    margin: 40px 0 40px 0;
-}
-
-.footer-hebergement{
-
-    float: left;
-    margin: 40px 0 40px 400px;
-}
-
-.footer-assistance{
-    float: right;
-    margin: 40px 400px 40px 0;
-}
-
 
 
 
 /* ------------------------Responsive ----------------------- */
+/*
 @media only screen and (max-width: 1650px){
     body{
         display: block;
@@ -582,3 +532,4 @@ body{
 
 
 }
+*/
