--- a/Reservia/public_css/desktop/main-desktop.css
+++ b/Reservia/public_css/desktop/main-desktop.css
@@ -1,11 +1,10 @@
-@font-face {
-    font-family:'Raleway', sans-serif;
+html{
+    font-family: 'Raleway','Arial', 'Helvetica','sans-serif';
 
 }
 
-body{
-    margin: 3.75em;
-    font-family: 'Raleway',Arial, Helvetica, sans-serif;
+body{    
+    margin: 40px 0 40px 40px;
 
 }
 
@@ -20,6 +19,11 @@ body{
     padding: 14px 16px;
     font-size: 17px;
     text-decoration: none;
+}
+.title{    
+    font-size: 20px;
+    font-weight: bold;
+    text-shadow: 0 0 black;
 }
 
 /* -----------------------------Style the nav-right --------------------------------------------*/
@@ -40,6 +44,22 @@ body{
     border: none;
 }
 
+.topnav-text-hebergement{
+
+    float: left;
+    width: 185px;
+    text-align: center;
+   
+
+
+}
+.topnav-text-activite{
+    float: right;
+    width: 180px;
+    text-align: center;
+  
+}
+
 
 /* -------------------------Style the nav-logo---------------------------------------------------- */
 .logo{
@@ -54,10 +74,22 @@ body{
 
 
 /* ------------------------For the  active/current Nav------------------------------------------- */
-.topnav-text:active {
+
+.topnav-text-hebergement:hover {
     border-top: 5px solid #0065fc;
+    color: #0065fc;
+}
+.hebergement-active:hover {
+    color: #0065fc;
 }
 
+.topnav-text-activite:hover {
+    border-top: 5px solid #0065fc;
+    color: #0065fc;
+}
+.activite-active:hover {   
+    color: #0065fc;
+}
 
 
 /*--------------------------Style Headers Search----------------------------------------------------------*/
@@ -211,8 +243,8 @@ body{
 }
 
 .h2-title, .afficher-plus{
-    margin-left:40px;
-    font-weight: bolder;
+    margin: 40px 0 30px 40px;
+
 }
 
 .column-hebergement {
@@ -273,15 +305,14 @@ body{
 
 /*--------------------------Style Section 1 Populaire---------------------------*/
 .h2-title-populaire{
-    margin-left: 40px;
-    font-weight: bold;
-    float: left;
-    margin-right: 120px;
+    margin: 10px 0px 20px 40px;
+   
 }
 .chart-logo{
     font-size: 30px;
     text-align: center;
-    margin: 20px;
+    margin: 30px 0 0 165px;
+   
 
 }
 .box2{
@@ -338,6 +369,9 @@ body{
 .box3{
     width: 100%;
 
+}
+.h2-title-activite{
+    margin: 40px 0 20px 0;
 }
 
 .row-activite-container {
@@ -399,25 +433,23 @@ body{
 }
 .picture-frioul{
     width: 344px;
-    height: 100px;
+    height: 89px;
     object-fit: cover;
 
 
 }
 .picture-large{
     width: 344px;
-    height: 413px;
-
-
+    height: 400px;
 }
 
 .picture-pomegues{
-    height: 255px;
+    height: 242px;
 }
 
 
 .picture-dame, .picture-longchamps{
-    height: 175px;
+    height: 167px;
 }
 
 .text-activite{
@@ -488,6 +520,9 @@ body{
     .footer-propos, .footer-hebergement,.footer-assistance{
         float: none;
         display: contents;
+    }
+    .box4{
+        margin-top: 40px;
     }
 }
 @media only screen and (max-width: 1129px) {
