--- a/main.css
+++ b/main.css
@@ -448,9 +448,10 @@ body{
 
 
 /* ------------------------Responsive ----------------------- */
-@media only screen and (min-width: 300px){
-    .box2{
-        width:  300px;
+@media only screen and (min-width: 300px ) and ( max-width: 374px){
+    .box2{        
+    display: block;
+    width: fit-content;
     }
     .card-populaire{
         width: 300px;
