--- a/main.css
+++ b/main.css
@@ -294,6 +294,7 @@ body{
     width: 325px;
     height: 200px;
     border-radius:10px;
+    background-color: white;
 
 }
 
@@ -319,11 +320,6 @@ body{
     margin-bottom: 20px;
 
 }
-
-.rating-hebergement{
-    margin: 10px 0 0 0;
-}
-
 .text-card{
     display: block;
     margin: 10px 0 15px 0;
@@ -351,7 +347,7 @@ body{
 }
 .box2{
     background-color: #F2F2F2;
-    height: 800px;
+    height: 650px;
     border-radius: 20px;
 }
 
@@ -369,14 +365,18 @@ body{
     margin: 0 0 20px 10px;
     text-align: left; 
     width: 90%;
-    height: 200px;
+    height: 145px;
     border-radius: 10px;
+    background-color: white;
+}
+h3{
+    margin: 0;
 }
 
 .populaire-picture{
     float:left;
     padding: 1px;
-    margin-right: 20px;
+    margin-right: 10px;
     width: 130px;
     height: 100%;
     border-radius: 10px 0px 0px 10px;
@@ -391,11 +391,11 @@ body{
 
 .text-card-populaire{
     display: block;
-    margin: 30px 0 15px 0;
+    margin: 10px 0 15px 0;
 }
 
 .rating-populaire-soleil,.rating-populaire-bleu{
-    margin-top: 70px;
+    margin-top: 50px;
 }
 .rating-populaire-chambre{
     margin-top: 50px;
@@ -414,10 +414,11 @@ body{
 
 .card-activite {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    height: 250px;
+    height: 200px;
     width: 100%;
     border-radius: 10px;
     margin-bottom: 40px;
+    background-color: white;
 }
 
 .activite-picture{
@@ -425,7 +426,7 @@ body{
     padding: 1px;
     margin-bottom: 30px;
     width: 100%;
-    height: 181px;
+    height: 135px;
     border-radius:  10px 10px 0px 0px;
     object-fit: cover;
 }
@@ -502,13 +503,13 @@ body{
     } 
     .box2{
         width: auto;  
-        height: 850px;
+        height: 750px;
     }    
     .rating-populaire-soleil,.rating-populaire-bleu{
-        margin-top: 90px;
+        margin-top: 70px;
     }
     .rating-populaire-chambre{
-        margin-top: 70px;
+        margin-top: 50px;
     }
     .card-populaire {   
         margin: 15px 125px;
@@ -553,7 +554,7 @@ body{
         margin: 0 195px 0 0
     }
     .box2{
-        height: 950px;
+        height: 750px;
     }
     .h2-title-populaire {        
         margin-bottom: 0;
@@ -561,9 +562,12 @@ body{
     .row-hebergement-2 {
         margin: 40px 40px 5px 100px;        
     }
-    .rating-populaire-soleil,.rating-populaire-bleu,.rating-populaire-chambre {
-        margin-top: 80px;
-    }    
+    .rating-populaire-soleil,.rating-populaire-bleu {
+        margin-top: 70px;
+    }   
+    .rating-populaire-chambre{
+        margin-top: 50px;
+    }
     .card-populaire {       
         margin-left: 60px;
     }   
@@ -679,7 +683,7 @@ body{
         margin: 0px 0px 0px 40px;        
     }      
     .rating-populaire-chambre,.rating-populaire-soleil, .rating-populaire-bleu {
-        margin-top: 40px;
+        margin-top: 60px;
     }
     .box1{
         width: 580px;
