--- a/main.css
+++ b/main.css
@@ -126,7 +126,7 @@ body{
     border-radius: 20px 20px 20px 20px;
     margin-left: 10px;
     padding: 0;
-    width: max-content;
+    width: 200px;
 
 }
 
