--- a/main.css
+++ b/main.css
@@ -135,7 +135,7 @@ body{
     font-size: 20px;
     text-align: center;
     border-radius: 15px 0 0 15px;
-    
+
 }
 
 .home{
@@ -451,19 +451,20 @@ h3{
 
 /* ------------------------Responsive ----------------------- */
 @media only screen and (min-width: 300px ) and ( max-width: 374px){
-    .box2{        
-        display: block;
-        width: fit-content;
+    .page-container{
+        margin: 0;        
     }
     .card-populaire{
         width: 300px;
+    }   
+    .card-hebergement {
+        margin: 0;
     }
     .rating-populaire-chambre {
         margin-top: 40px;
     }
     .activite-picture {
         margin-bottom: 10px; 
-
     }
 }
 
